2004-02-12  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* packages/aflib/c/src/aflib.c (aflib_loader_seek): implemented seek for audiofile.

2004-02-12  Alexandre Pages  <Alexandre.Pages@ircam.fr>

        * ftsdll.dsp : removed fts/property.c from the project
        * include/fts/property.h : removed duplicated prototypes

2004-02-12  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* fts/property.c: removed obsolete file (code moved to patcherobject.c).

2004-02-05  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* packages/signal/c/src/playfvec.c (segment_set): Fixed bug "[ 891290 ] play~ with zero size vector".
	Added empty flag in segment_t structure.

2004-01-29  Alexandre Pages  <Alexandre.Pages@ircam.fr>

      * added sample format conversion routines in the ASIO package (sample_converters.h/c)

2004-01-13  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* configure.in: fixed java check test failed if CLASSPATH env variable was set.

2004-01-08  Norbert Schnell  <schnell@mac-portable-schnell.ircam.fr>

	* moved fts_function_get_by_name() from function.c to fts_get_function_by_name() to package.c

	* fixed function "new" - new_function() in function.c: now uses fts_object_create()

	* added object reference by fts_atom_refer() for function and method call return value in expression.c

2004-01-08  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* utils/rpm/jmax.spec.in: added custom variable for setting the dependency with external packages.
	I hope that can be used by packagers of other RPM based distro.

2004-01-07  Norbert Schnell  <Norbert.Schnell@ircam.fr>

	* moved fts_class_get_by_name() from class.c to fts_get_class_by_name() to package.c

	* updated Xcode project (added package functions, and converted to "native" project)
	
2004-01-07  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* packages/signal/c/src/playfvec.c (play_ftl): fixed bug [ 872267 ] play bug with fvec starting by non 0 value. 
	Now in stop mode, play~ outputs 0.