@@ -1,5 +1,7 @@
 2004-02-12  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>
 
+	* packages/dtd/c/src/readsf.c (readsf_eof_alarm): seek to begin of file when eof is reached.
+
 	* packages/aflib/c/src/aflib.c (aflib_loader_seek): implemented seek for audiofile.
 
 2004-02-12  Alexandre Pages  <Alexandre.Pages@ircam.fr>
